--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <img src="./assets/others/logo.png" alt="." height="200px">
+            <img src="./assets/others/logohotel.png" alt="." height="200px">
             <h1 id="bemvindo">...</h1>
             <h2 id="cliqueabaixo">...</h2>
         </div>
@@ -73,3 +73,4 @@
 </body>
 
 </html>
+
