--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2 id="cliqueabaixo">...</h2>
         </div>
         <div class="icons">
-            <div class="icon-container" id="information"><a href="...">
+            <div class="icon-container" id="information"><a href="https://visualpraiahotel.com.br/index.php/o-hotel/#servicos">
                     <div class="icon"><img src="./assets/icons/informacoes.png" alt="."></div>
                 </a>
                 <p class="descrição" id="desc1">...</p>
@@ -54,28 +54,28 @@
                 <p class="descrição" id="desc3">...</p>
             </div>
 
-            <div class="icon-container" id="cardapioroom"><a href="...">
+            <div class="icon-container" id="cardapioroom"><a href="https://visualroomservice.alou.io/menu">
                     <div class="icon"><img src="./assets/icons/gastronomia.png" alt="."></div>
                 </a>
                 <p class="descrição" id="desc4">...</p>
             </div>
-            <div class="icon-container" id="cardapiorestaurante"><a href="...">
+            <div class="icon-container" id="cardapiorestaurante"><a href="https://visualrestaurante.alou.io/menu">
                     <div class="icon"><img src="./assets/icons/gastronomia.png" alt="."></div>
                 </a>
                 <p class="descrição" id="desc5">...</p>
             </div>
-            <div class="icon-container" id="whatsapp"><a href="...">
+            <div class="icon-container" id="whatsapp"><a href="https://visualpraiahotel.com.br/index.php/contato/">
                     <div class="icon"><img src="./assets/icons/whatsapp.png" alt="."></div>
                 </a>
                 <p class="descrição" id="desc6">...</p>
             </div>
 
-            <div class="icon-container" id="clima"><a href="...">
+            <div class="icon-container" id="clima"><a href="https://www.climatempo.com.br/previsao-do-tempo/cidade/334/natal-rn">
                     <div class="icon"><img src="./assets/icons/frigobar.png" alt="."></div>
                 </a>
                 <p class="descrição" id="desc7">...</p>
             </div>
-            <div class="icon-container" id="reserva"><a href="...">
+            <div class="icon-container" id="reserva"><a href="https://visualpraiahotel.com.br/">
                     <div class="icon"><img src="./assets/icons/informacoes.png" alt="."></div>
                 </a>
                 <p class="descrição" id="desc8">...</p>
@@ -138,4 +138,5 @@
         </div>
     </div>
 </body>
+
 </html>
